--- a/_posts/2014-01-06-index.md
+++ b/_posts/2014-01-06-index.md
@@ -17,7 +17,8 @@ title: ページのタイトルです
 keyword: キーワード1,キーワード2,キーワード3,キーワード4
 description: ページのdescriptionが入ります。
 layout: default.hbs
-pagetype: toppage
+~~pagetype: toppage~~（2014.1.19修正）
+is_toppage: true
 ---
 ```
 
@@ -29,7 +30,8 @@ title: ページのタイトルです
 keyword: キーワード1,キーワード2,キーワード3,キーワード4
 description: ページのdescriptionが入ります。
 layout: default.hbs
-pagetype: subpage
+~~pagetype: subpage~~（2014.1.19修正）
+is_toppage: false
 ---
 ```
 
@@ -51,6 +53,19 @@ pagetype: subpage
 でも、別にこんな感じで`<h1></h1>`タグを出し分ける必要ってあんまりないのかな、、コンテンツ部分は`<article></article>`で囲って、その中で`<h1></h1>`タグ使えば別に問題ないのかな、、と思いつつどこかで使うところがあるかもしれないということで。。
 
 他にもっと適切な方法があるような気もしますが、handlebarsややこしい。。。
+
+
+###追記（2014.1.19）
+これで大丈夫と思ってたら、buildしたらエラーになってbuildしてくれなかった。
+どうやら記述が間違っていたみたい。
+
+[assembleで静的webサイトを作った](http://count0.org/2013/08/03/static-site-generate-assemble.html)
+
+で記載されていたように、true，falseにすればOKだった。
+
+YAML front matterで、if,elseしたい場合は、true,falseでしないといけないのか。。。？
+我ながら勉強不足は困る。。
+
 
 
 
