--- a/_posts/2014-08-05-index.md
+++ b/_posts/2014-08-05-index.md
@@ -6,6 +6,8 @@ categories: etc
 ---
 
 
+ようやく試してみる気になったWeb Components。ちょうどWeb Componentsでやってみたいことができたので、最初から調べていこうと思う。
+
 ##Web Componentsの仕様
 Web Componentsは4つの仕様から構成されているようで
 
